<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/intComingCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        android:foreground="?attr/selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <ImageView
                android:id="@+id/int_picture"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/fab_btn_bg"
                android:padding="6dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/pict_logo"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/add_intcoming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/incoming_add"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/int_picture"
                app:layout_constraintTop_toTopOf="@id/int_picture"
                app:layout_constraintEnd_toStartOf="@id/deleteBtn"
                android:layout_marginStart="12dp" />

            <ImageView
                android:id="@+id/plus_green"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/green_plus"
                app:layout_constraintBottom_toBottomOf="@+id/intSumma"
                app:layout_constraintEnd_toStartOf="@+id/intSumma"
                app:layout_constraintStart_toStartOf="@+id/add_intcoming"
                app:layout_constraintTop_toTopOf="@+id/intSumma" />

            <TextView
                android:id="@+id/intSumma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_30_000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/plus_green"
                app:layout_constraintTop_toBottomOf="@id/add_intcoming"
                tools:layout_editor_absoluteX="78dp" />

            <TextView
                android:id="@+id/valyutaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uzs"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/intSumma"
                app:layout_constraintBaseline_toBaselineOf="@id/intSumma"
                android:layout_marginStart="6dp" />

            <TextView
                android:id="@+id/dayYearRcy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_11_10_2025"
                android:textColor="#888"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/plus_green"
                app:layout_constraintTop_toBottomOf="@id/intSumma" />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>
