<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/intComingCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        android:elevation="6dp"
        android:foreground="?attr/selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <ImageView
                android:id="@+id/exp_picture"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/fab_btn_bg"
                android:padding="6dp"
                android:layout_marginStart="14dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pict_logo"
                android:contentDescription="@string/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/deleteBtnExp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_expenses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/incoming_add"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/exp_picture"
                app:layout_constraintTop_toTopOf="@id/exp_picture"
                app:layout_constraintEnd_toStartOf="@id/deleteBtnExp" />

            <ImageView
                android:id="@+id/red_plus"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/red_plus"
                app:layout_constraintBottom_toBottomOf="@+id/expSumma"
                app:layout_constraintEnd_toStartOf="@+id/expSumma"
                app:layout_constraintStart_toStartOf="@+id/add_expenses"
                app:layout_constraintTop_toTopOf="@+id/expSumma" />

            <TextView
                android:id="@+id/expSumma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_30_000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/red_plus"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/add_expenses"
                tools:layout_editor_absoluteX="78dp" />

            <TextView
                android:id="@+id/valyutaTxtExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uzs"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@id/expSumma"
                app:layout_constraintBaseline_toBaselineOf="@id/expSumma" />

            <TextView
                android:id="@+id/dayYearRcyExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_11_10_2025"
                android:textColor="#888"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/red_plus"
                app:layout_constraintTop_toBottomOf="@id/expSumma" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>
