<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:padding="16dp"
    app:cardElevation="6dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fromDataEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_data"
            android:inputType="numberDecimal"
            android:textColor="#000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toDataEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_data"
            android:inputType="numberDecimal"
            android:textColor="#000" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="#2196F3"
        app:endIconMode="dropdown_menu">

        <AutoCompleteTextView
            android:id="@+id/ExpSpinnerBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/select_category"
            android:inputType="none"
            android:padding="12dp"
            android:textColor="#000" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>


